--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,19 +9,19 @@ main:
     url: /publications/
 
   - title: "Talks"
-    url: /talks/    
+    url:    
 
   - title: "Teaching"
-    url: /teaching/    
+    url:   
     
   - title: "Portfolio"
-    url: /portfolio/
+    url: 
         
   - title: "Blog Posts"
-    url: /year-archive/
+    url: 
     
   - title: "CV"
     url: /cv/
     
   - title: "Guide"
-    url: /markdown/
+    url: 
