--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  linkedin         : "https://www.linkedin.com/in/kuai-yu-1204a6215/"
-  twitter          : "https://x.com/faai_jyu"
+  linkedin         : "kuai-yu-1204a6215"
+  twitter          : "faai_jyu"
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
