--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ author:
   avatar           : "profile.png"
   name             : "Kuai Yu"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Rewrite the Stars"
   location         : "Earth"
-  employer         : "Johns Hopkins University"
+  employer         : "Johns Hopkins Bloomberg School of Public Health"
   uri              : # URL
   email            : "kyu25@jh.edu" 
 
