--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Rewrite the Stars"
   location         : "Earth"
-  employer         : "Johns Hopkins Bloomberg School of Public Health"
+  employer         : "Johns Hopkins University"
   uri              : # URL
   email            : "kyu25@jh.edu" 
 
